--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Слайдер</title>
   <link rel="stylesheet" href="css/styles.css">
-  <script src = "js/slider.js"></script>
+  <script src = "js/slider.js" defer></script>
 </head>
 <body>
   <section class="product-item">
